# datacollector

./: README.md  pyproject.toml
datacollector/: __init__.py  collector.py  library.py  main.py  models.py  parsers.py  task.py  test.ipynb  utils.py
datacollector/configs/: instruction.yaml  ner.yaml  positive_reframing.yaml  search.yaml  sentiment.yaml  sts.yaml  summarization.yaml
datacollector/crawlers/: __init__.py  crawler.py
datacollector/data/: data.json
datacollector/filters/: text_filter.py
datacollector/functions/: __init__.py  classifier.py  functions.py  ner.py  sentiment.py  sts.py  topic_tagging.py
datacollector/out_parser/: parser.py  parsers.py
datacollector/pipeline/: pipeline.py
datacollector/templates/: chat.py
