[tool.poetry]
name = "datacollector"
version = "0.1.0"
description = ""
authors = ["banda-larga <edoardofedericik@virgilio.it>", "Gabriele Destro <gabriele.destro@gmail.com>"]
readme = "README.md"
packages = [{include = "datacollector"}]

[tool.poetry.dependencies]
python = "^3.8"
openai = "^0.27.8"
datasets = "^2.13.0"
pydantic = "^1.10.9"
click = "^8.1.3"
httpx = "^0.24.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
